--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,9 +1,6 @@
 <div class="container">
-  <div class="ordem-compra"  
-  style="margin-top: 160px; margin-bottom: 60px"
-  *ngIf="idPedidoCompra === undefined"
-  >
-    <form novalidate>
+  <div class="ordem-compra">
+    <form novalidate [formGroup]="formulario" (ngSubmit)="confirmarCompra()">
     
       <h5>Sua Compra</h5>
       <hr />
@@ -65,68 +62,44 @@
       </div>
       <br />
 
-
       <h5>Dados de entrega</h5>
       <hr />
 
       <div class="form-row">
 
         <div class="form-group col-md-6">
-          <input type="text" 
-          class="form-control {{ enderecoEstadoPrimitivo? '' : (validacaoEndereco? 'is-valid' : 'is-invalid') }}"
-          placeholder="Endereço"
-          autocomplete="off"
-          minlength="5"
-          required
-          [value]='endereco'
-          #inputEndereco
-          (input)="atualizaEndereco(inputEndereco.value)"
+          <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Endereço" 
+            autocomplete="off" 
+            formControlName="endereco"
           >
-          <div *ngIf="enderecoEstadoPrimitivo == false">
-            <div *ngIf="validacaoEndereco; else msgEnderecoInvalido">
-              <small class="form-text text-success">Endereco Válido</small>
-            </div>
-            <ng-template #msgEnderecoInvalido>
-              <small class="form-text text-danger">Endereco Invalido</small>
-            </ng-template>
-          </div>
+          <small *ngIf="formulario.get('endereco').valid && formulario.get('endereco').touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!formulario.get('endereco').valid && formulario.get('endereco').touched" class="form-text text-danger">Inválido</small>
         </div>
 
         <div class="form-group col-md-2">
           <input 
-          type="text" 
-          class="form-control {{ numeroEstadoPrimitivo? '' : (validacaoNumero? 'is-valid' : 'is-invalid')}}" 
-          placeholder="Número" 
-          autocomplete="off" 
-          minlength="1" 
-          required
-          [value]="numero"
-          #inputNumero
-          (input)="atualizaNumero(inputNumero.value)">
-          <div *ngIf="numeroEstadoPrimitivo == false">
-            <div *ngIf="validacaoNumero; else msgNumeroInvalido">
-              <small class="form-text text-success">Número Válido</small>
-            </div>
-            <ng-template #msgNumeroInvalido>
-              <small class="form-text text-danger">Número Inválido</small>
-            </ng-template>
+            type="text" 
+            class="form-control" 
+            placeholder="Número" 
+            autocomplete="off"
+            formControlName="numero"
+          >
+          <small *ngIf="formulario.get('numero').valid && formulario.get('numero').touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!formulario.get('numero').valid && formulario.get('numero').touched" class="form-text text-danger">Inválido</small>
 
-
-          </div>
         </div>
 
         <div class="form-group col-md-4">
-          <input type="text"
-           class="form-control {{ complementoEstadoPrimitivo? '' : (validacaoComplemento? 'is-valid' : '')}}"
-            placeholder="Complemento"
-             autocomplete="off"
-             [value]="complemento"
-             #inputComplemento
-             (input)="atualizaComplemento(inputComplemento.value)">
-              <div *ngIf="complementoEstadoPrimitivo == false"> 
-                  <small class="form-text text-success">Complemento Válido</small>
-              </div>
-
+          <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Complemento" 
+            autocomplete="off"
+            formControlName="complemento"
+          >
         </div>
 
       </div>
@@ -138,34 +111,27 @@
       <div class="form-row">
           
         <div class="form-group col-md-3">
-          <select class="form-control {{pagamentoEstadoPrimitivo? '' : (validacaoPagamento? 'is-valid' : 'is-invalid')}}"
-          #selectFormaPagamento
-          (change)="atualizaFormaPagamento(selectFormaPagamento.value)"
+          <select 
+            class="form-control"
+            formControlName="formaPagamento"
           >
             <option value="">Selecione uma opção</option>
-            <option value="dinheiro" selected="{{ formaPagamento == 'dinheiro' ? 'selected' : '' }}">Dinheiro</option>
-            <option value="debito" selected="{{ formaPagamento == 'debito' ? 'selected' : '' }}">Débito</option>
+            <option value="dinheiro">Dinheiro</option>
+            <option value="debito">Débito</option>
           </select>
-           
-          <div *ngIf="pagamentoEstadoPrimitivo == false">
-            <div *ngIf="validacaoPagamento; else msgPagamentoInvalido">
-              <small class="form-text text-success">Selecionado</small>
-            </div>
-            <ng-template #msgPagamentoInvalido>
-              <small class="form-text text-danger">Selecione uma forma de Pagamento</small>
-            </ng-template>
+          <small *ngIf="formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched" class="form-text text-danger">Inválido</small>
 
-
-          </div>          
         </div>
       </div>
 
       <hr />
-      <button type="button" class="btn btn-primary btn-lg" [disabled]="formEstado"
-      (click)="confirmarCompra()">Cofirmar compra</button>
+      <button 
+        type="submit" 
+        class="btn btn-primary btn-lg"
+        [disabled]="!formulario.valid"
+
+      >Cofirmar compra</button>
     </form>
-  </div>
-  <div *ngIf="idPedidoCompra !== undefined">
-    <app-ordem-compra-sucesso [idPedidoCompra]=idPedidoCompra></app-ordem-compra-sucesso>
   </div>
 </div>
